--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ code {
 
 .leftBar{
   display: block;
-  width: 40%;
+  width: 280px;
   min-width: 280px;
   border-right: 1px solid #efeeee;
   height: 75vh;
@@ -227,6 +227,7 @@ code {
   padding-left: 20px;
   padding-right: 35px;
   height: 75vh;
+  width: 100%;
 }
 
 .bigImage{
@@ -418,4 +419,19 @@ code {
 
 .input-range__track--active{
   background: black !important;
+}
+
+.loading{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 15px;
+}
+
+.activeSize{
+  box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
+  border: 1px solid black;
+  background: black;
+  color: white;
 }
