--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ code {
   display: flex;
   justify-content: space-around;
 }
+.main{
+  width: 100%;
+  height: 100%;
+}
 
 .box{
   border: 1px solid #efeeee;
@@ -177,6 +181,10 @@ code {
   min-width: 200px;
   align-items: center;
   display: flex;
+}
+
+.ml-5{
+  margin-left: 5px;
 }
 
 .ml-20{
@@ -337,10 +345,84 @@ code {
   padding: 2px;
 }
 
+.leftSlider{
+
+}
+
+.modalClose{
+  display: none;
+}
+
+.filterView{
+  display: none;
+}
+
+.filterIcon{
+  font-size: 20px;
+}
+
+.filterButton{
+  background-color: transparent;
+  border: 0px;
+  position: absolute;
+  top: 35px;
+  left: -4px
+}
+
+.closeIcons{
+  background-color: transparent;
+  border: 0px;
+}
+
+.filterButton:focus{
+  color: red;
+}
+
+.closeIcons:focus{
+  color: red;
+}
+
+.active{
+  display: block !important;
+}
+
 @media (max-width: 660px) {
+  
+  .filterView{
+    display: block;
+    position: relative;
+  }
+
   .leftBar{
     display: none;
+    position: absolute;
+    background: white;
+    z-index: 10;
+    width: 100%;
+    animation: MoveUpDown 1s ease-in;
   }
+
+  
+@keyframes MoveUpDown {
+  0%{
+    width: 0%;
+  }
+  50%{
+    width: 50%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+  .leftSlider{
+    position: relative;
+  }
+
+  
+.modalClose{
+  display: block;
+}
 
   /* .hamburger{
     display: block;
@@ -381,11 +463,6 @@ code {
   width: 25px;
 }
 
-.categoryAnimation {
-  animation: MoveUpDown 1s ease-in;
-  max-height: 150px;
-}
-
 .mt-30{
   margin-top: 30px;
 }
@@ -399,14 +476,10 @@ code {
     overflow: auto;
 }
 
-@keyframes MoveUpDown {
-  0%{
-    height: 0px;
-  }
-  100% {
-    height: 10px;
-  }
-}
+/* .leftBar {
+  
+  max-height: 150px;
+} */
 
 .input-range{
   left: 18px !important;
@@ -435,4 +508,8 @@ code {
   border: 1px solid black;
   background: black;
   color: white;
+}
+
+.font-15{
+  font-size: 15px;
 }
