--- a/src/index.css
+++ b/src/index.css
@@ -398,6 +398,7 @@ code {
     position: absolute;
     background: white;
     z-index: 10;
+    left: 20px;
     width: 100%;
     animation: MoveUpDown 1s ease-in;
   }
@@ -512,4 +513,17 @@ code {
 
 .font-15{
   font-size: 15px;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
 }
