--- a/src/index.css
+++ b/src/index.css
@@ -374,14 +374,6 @@ code {
   border: 0px;
 }
 
-.filterButton:focus{
-  color: red;
-}
-
-.closeIcons:focus{
-  color: red;
-}
-
 .active{
   display: block !important;
 }
@@ -400,6 +392,7 @@ code {
     z-index: 10;
     left: 20px;
     width: 100%;
+    border-radius: 8px;
     animation: MoveUpDown 1s ease-in;
   }
 
@@ -516,6 +509,7 @@ code {
 }
 
 .overlay {
+  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
